commit dc05b9e5899536f1792a8122365263870e73d923
Author: Leszek Godlewski <lg@inequation.org>
Date:   Thu Dec 15 15:18:01 2011 +0100

    * further workspace refactoring
    * added a web app that provides a simple JSP front-end to a servlet-invoked renderer

commit 3cd3aaa077855e37c466e479901af720b8d9a175
Author: Leszek Godlewski <lg@inequation.org>
Date:   Thu Dec 15 10:10:10 2011 +0100

    project reorganization - split the renderer into a separate library project

commit 0fbd80cafbedd5f8db64a80d41c8dd60d497cc2a
Author: Leszek Godlewski <lg@inequation.org>
Date:   Sun Nov 27 13:29:54 2011 +0100

    * added all the missing renderer infrastructure (camera, intersection, planes, point lights, materials etc.)
    * added a Blinn-Phong shader material
    * added a GUI in Swing
    * dropped clone() overrides in favour of copy constructors
    * fixed several bugs in the raycasting algorithm

commit 7c8b3b52c5a86a64c0dc246ffdc40955c4c99a54
Author: Leszek Godlewski <lg@inequation.org>
Date:   Wed Nov 9 00:50:54 2011 +0100

    * slightly reorganized the package structure of the project
    * added commandline argument handling in the main class
    * added a linear colour class
    * added stub classes for scene and shader
    * implemented unit tests for the functional classes

commit cd0c11fdcc11ba31d3b3b0f32ffb1aafcb408c86
Author: Leszek Godlewski <lg@inequation.org>
Date:   Wed Oct 26 19:07:56 2011 +0200

    * set up the NetBeans project
    * added a 3-dimensional vector class
    * added the ray class
    * added the traceable interface