@@ -1,5 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <context-param>
+        <param-name>DBDriver</param-name>
+        <param-value>derby</param-value>
+    </context-param>
+    <context-param>
+        <param-name>DBHost</param-name>
+        <param-value>localhost</param-value>
+    </context-param>
+    <context-param>
+        <param-name>DBPort</param-name>
+        <param-value>1527</param-value>
+    </context-param>
+    <context-param>
+        <param-name>DBDatabase</param-name>
+        <param-value>rayspresso</param-value>
+    </context-param>
+    <context-param>
+        <param-name>DBUsername</param-name>
+        <param-value>rayspresso</param-value>
+    </context-param>
+    <context-param>
+        <param-name>DBPassword</param-name>
+        <param-value>rayspresso</param-value>
+    </context-param>
     <servlet>
         <servlet-name>RayspressoServlet</servlet-name>
         <servlet-class>org.inequation.rayspresso.servlet.RayspressoServlet</servlet-class>
